syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform{
	rpc getAllPlatforms (GetAllRequest) returns (platformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel{
	int32 platformId = 1;
	string name = 2;
	string publisher = 3;
}

message platformResponse{
	repeated GrpcPlatformModel platformResponse  = 1;
}


